# sigmalint

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
sigmalint/: sigmalint.py
sigmalint/schema/: __init__.py  schema.py
tests/: test_sigmalint.py
